--- a/.env.staging.sample
+++ b/.env.staging.sample
@@ -1,10 +1,10 @@
 REACT_APP_NAME="skunk-boilerplate"
 REACT_APP_HOMEPAGE=""
-REACT_APP_WEBSITE_TITLE="[Development] Greenpeace Skunk"
+REACT_APP_WEBSITE_TITLE="[Staging] Greenpeace Skunk"
 REACT_APP_WEBSITE_META_DESCRIPTION="Greenpeace Meta Description"
 REACT_APP_API_URL="https://backoffice.greenpeace.org.ar/api"
-REACT_APP_MEMBERSHIP_DOWNGRADE_FORM_ID=19
-REACT_APP_MEMBERSHIP_CANCEL_FORM_ID=24
+REACT_APP_FORM_ID_REDUCE_AMOUNT=15
+REACT_APP_FORM_ID_CANCEL_MEMBERSHIP=16
 REACT_APP_SHARE_URL="https://unite.greenpeace.org.ar"
 REACT_APP_SHARE_TITLE="Unite a Greenpeace"
 REACT_APP_SHARE_FACEBOOK_TITLE="¡Vivir una vida sustentable es posible si cada persona hace su pequeño esfuerzo! 🌱 Unite vos también a la sustentabilidad con Greenpeace 👇"
