--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "email": "dtovbein@gmail.com",
     "url": "https://github.com/dantovbein"
   },
-  "homepage": ".",
+  "homepage": "/sk/membership-downgrade",
   "dependencies": {
     "@analytics/google-analytics": "^0.5.3",
     "@bit/meema.gpar-ui-components.form": "0.0.4",
+    "@bit/meema.gpar-ui-components.general.button": "0.0.3",
+    "@bit/meema.ui-components.carousel": "0.0.64",
     "@bit/meema.ui-components.elements": "0.0.49",
     "@bit/meema.ui-components.loaders.three-circles": "0.0.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -20,11 +22,13 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
     "analytics": "^0.7.5",
+    "axios": "^0.21.1",
     "meema.utils": "^1.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-facebook-pixel": "^1.0.4",
     "react-gtm-module": "^2.0.11",
+    "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
@@ -33,10 +37,13 @@
   },
   "scripts": {
     "client:start:development": "npm run client:env:development && NODE_ENV=development && node -r dotenv/config ./node_modules/.bin/react-scripts start",
+    "client:start:staging": "npm run client:env:staging && NODE_ENV=staging && node -r dotenv/config ./node_modules/.bin/react-scripts start dotenv_config_path=$PWD/.env.staging",
     "client:start:production": "npm run client:env:production && NODE_ENV=production && node -r dotenv/config ./node_modules/.bin/react-scripts start",
     "client:build:development": "npm run client:env:development && NODE_ENV=development && react-scripts --expose-gc --max-old-space-size=8192 build && npm run build:version",
+    "client:build:staging": "npm run client:env:staging && NODE_ENV=staging && react-scripts --expose-gc --max-old-space-size=8192 build && npm run build:version",
     "client:build:production": "npm run client:env:production && NODE_ENV=production && react-scripts --expose-gc --max-old-space-size=8192 build && npm run build:version",
     "client:env:development": "cp .env.development.sample .env.development",
+    "client:env:staging": "cp .env.staging.sample .env.staging",
     "client:env:production": "cp .env.production.sample .env.production",
     "build:version": "npm run build:version:id && npm run build:version:date && npm run build:author",
     "build:version:id": "VERSION_BUILD=$(git describe --long) && sed -i -- 's/%VERSION_BUILD%/'$VERSION_BUILD'/g' ./build/index.html",
@@ -64,6 +71,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/moment": "^2.13.0",
     "@types/react": "^17.0.14",
     "@types/react-gtm-module": "^2.0.1",
