--- a/.env.production.sample
+++ b/.env.production.sample
@@ -1,7 +1,10 @@
 REACT_APP_NAME="skunk-boilerplate"
 REACT_APP_HOMEPAGE=""
-REACT_APP_WEBSITE_TITLE="Greenpeace Skunk"
+REACT_APP_WEBSITE_TITLE="[Development] Greenpeace Skunk"
 REACT_APP_WEBSITE_META_DESCRIPTION="Greenpeace Meta Description"
+REACT_APP_API_URL="https://backoffice.greenpeace.org.ar/api"
+REACT_APP_MEMBERSHIP_DOWNGRADE_FORM_ID=19
+REACT_APP_MEMBERSHIP_CANCEL_FORM_ID=24
 REACT_APP_SHARE_URL="https://unite.greenpeace.org.ar"
 REACT_APP_SHARE_TITLE="Unite a Greenpeace"
 REACT_APP_SHARE_FACEBOOK_TITLE="¡Vivir una vida sustentable es posible si cada persona hace su pequeño esfuerzo! 🌱 Unite vos también a la sustentabilidad con Greenpeace 👇"
@@ -11,11 +14,6 @@ REACT_APP_SHARE_EMAIL_SUBJECT="Colaborá vos también con el medio ambiente"
 REACT_APP_SHARE_EMAIL_BODY="¡Hola! Hoy hice mi aporte para cuidar el planeta con Greenpeace. Mientras más seamos, mejor. Colaborá vos también desde acá:"
 REACT_APP_PRIVACY_POLICY_URL="https://www.greenpeace.org/argentina/politica-privacidad/"
 REACT_APP_TERMS_AND_CONDITIONS_URL="https://www.greenpeace.org/argentina/terminos-y-condiciones/"
-REACT_APP_UNITE_URL="https://unite.greenpeace.org.ar/sk/one-off?campaign=landing-sustentabilidad&ref=skunk-donacionmensual-landing-sustentabilidad"
-REACT_APP_DONA_URL="https://unite.greenpeace.org.ar/sk/one-off/registration?campaign=landing-sustentabilidad&ref=skunk-donacionmensual-typage-sustentabilidad"
 REACT_APP_GOOGLE_TAG_MANAGER="GTM-TZB6GQ3"
 REACT_APP_GOOGLE_ANALYTICS_ID="UA-175817761-1"
-REACT_APP_FACEBOOK_PIXEL_ID="713455948697688"
-REACT_APP_DATA_CRUSH_PORTAL_ID=90
-REACT_APP_DATA_CRUSH_EVENT_ID=""
-REACT_APP_DATA_CRUSH_SYNCHRO_KEY=""
+REACT_APP_FACEBOOK_PIXEL_ID=713455948697688
