--- a/.env.staging.sample
+++ b/.env.staging.sample
@@ -17,3 +17,6 @@ REACT_APP_TERMS_AND_CONDITIONS_URL="https://www.greenpeace.org/argentina/termino
 REACT_APP_GOOGLE_TAG_MANAGER="GTM-TZB6GQ3"
 REACT_APP_GOOGLE_ANALYTICS_ID="UA-175817761-1"
 REACT_APP_FACEBOOK_PIXEL_ID=713455948697688
+
+REACT_APP_HOTJAR_ID="2619010"
+REACT_APP_HOTJAR_SV="6"
