Modify package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "skunk-boilerplate",
+  "name": "greenpeace-landing-downgrade",
   "version": "0.1.0",
   "private": true,
   "author": {
