Modify and reimplement env files

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -1,25 +1,26 @@
-REACT_APP_NAME="skunk-boilerplate"
-REACT_APP_HOMEPAGE=""
+PUBLIC_URL="/sk/membership-downgrade/"
+
+REACT_APP_ENVIRONMENT="production"
+REACT_APP_NAME="landing_downgrade"
 REACT_APP_WEBSITE_TITLE="Greenpeace Argentina - Formulario de baja"
 REACT_APP_WEBSITE_META_DESCRIPTION="Greenpeace Meta Description"
-REACT_APP_API_URL="https://backoffice.greenpeace.org.ar/api"
+
 REACT_APP_MEMBERSHIP_DOWNGRADE_FORM_ID=25
 REACT_APP_MEMBERSHIP_CANCEL_FORM_ID=28
-REACT_APP_SHARE_URL="https://unite.greenpeace.org.ar"
-REACT_APP_SOCIAL_MEDIA_URL_FACEBOOK="https://facebook.com/GreenpeaceArg"
-REACT_APP_SOCIAL_MEDIA_URL_INSTAGRAM="https://instagram.com/greenpeacearg"
-REACT_APP_SOCIAL_MEDIA_URL_TWITTER="https://twitter.com/greenpeacearg"
-REACT_APP_SHARE_TITLE="Unite a Greenpeace"
-REACT_APP_SHARE_FACEBOOK_TITLE="¡Vivir una vida sustentable es posible si cada persona hace su pequeño esfuerzo! 🌱 Unite vos también a la sustentabilidad con Greenpeace 👇"
-REACT_APP_SHARE_TWITTER_TITLE="El camino hacia la sustentabilidad es responsabilidad compartida. Sumate vos también para hacer la diferencia desde acá 👇"
-REACT_APP_SHARE_WHATSAPP_TITLE="¡Hola! Me uní al consumo responsable con la campaña de Sustentabilidad de Greenpeace. ¡Unite vos también! Mirá 👇"
-REACT_APP_SHARE_EMAIL_SUBJECT="Colaborá vos también con el medio ambiente"
-REACT_APP_SHARE_EMAIL_BODY="¡Hola! Hoy hice mi aporte para cuidar el planeta con Greenpeace. Mientras más seamos, mejor. Colaborá vos también desde acá:"
-REACT_APP_PRIVACY_POLICY_URL="https://www.greenpeace.org/argentina/politica-privacidad/"
-REACT_APP_TERMS_AND_CONDITIONS_URL="https://www.greenpeace.org/argentina/terminos-y-condiciones/"
+
 REACT_APP_GOOGLE_TAG_MANAGER="GTM-TZB6GQ3"
 REACT_APP_GOOGLE_ANALYTICS_ID="UA-175817761-1"
 REACT_APP_FACEBOOK_PIXEL_ID=713455948697688
-
 REACT_APP_HOTJAR_ID="2619010"
 REACT_APP_HOTJAR_SV="6"
+
+REACT_APP_API_URL="https://backoffice.greenpeace.org.ar/api"
+
+REACT_APP_SOCIAL_MEDIA_URL_FACEBOOK="https://facebook.com/GreenpeaceArg"
+REACT_APP_SOCIAL_MEDIA_URL_INSTAGRAM="https://instagram.com/greenpeacearg"
+REACT_APP_SOCIAL_MEDIA_URL_TWITTER="https://twitter.com/greenpeacearg"
+
+REACT_APP_PRIVACY_POLICY_URL="https://www.greenpeace.org/argentina/politica-privacidad/"
+REACT_APP_TERMS_AND_CONDITIONS_URL="https://www.greenpeace.org/argentina/terminos-y-condiciones/"
+
+REACT_APP_AUTOFILL_VALUES=false
