--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/node": "^12.0.0",
     "@types/react-dom": "^17.0.0",
     "analytics": "^0.7.5",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "meema.utils": "^1.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -29,7 +29,7 @@
     "react-gtm-module": "^2.0.11",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
