Implement Docker and NGINX integration

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -1,4 +1,4 @@
-PUBLIC_URL="/sk/membership-downgrade/"
+PUBLIC_URL="/membership-downgrade/"
 
 REACT_APP_ENVIRONMENT="production"
 REACT_APP_NAME="landing_downgrade"
