--- a/.env.test.sample
+++ b/.env.test.sample
@@ -1,4 +1,4 @@
-PUBLIC_URL="/sk/membership-downgrade-test/"
+PUBLIC_URL="/membership-downgrade/"
 
 REACT_APP_ENVIRONMENT="test"
 REACT_APP_NAME="landing_downgrade"
@@ -24,4 +24,4 @@ REACT_APP_SOCIAL_MEDIA_URL_TWITTER="https://twitter.com/greenpeacearg"
 REACT_APP_PRIVACY_POLICY_URL="https://www.greenpeace.org/argentina/politica-privacidad/"
 REACT_APP_TERMS_AND_CONDITIONS_URL="https://www.greenpeace.org/argentina/terminos-y-condiciones/"
 
-REACT_APP_AUTOFILL_VALUES=false
+REACT_APP_AUTOFILL_VALUES=true
