--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,7 +7,7 @@ ENV PATH /home/app/landing-downgrade/node_modules/.bin:$PATH
 COPY package*.json ./
 COPY .npmrc ./
 
-RUN npm install -g npm@8.15.0
+RUN npm install -g npm@8.15.0 --location=global
 RUN npm install --location=global react-scripts
 RUN npm install --legacy-peer-deps
 RUN npm run types
