--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -6,7 +6,7 @@ WORKDIR /app
 # Copy all files from current directory to working dir in image
 # If you want to install the project
 COPY . .
-RUN npm install -g npm@8.15.0
+RUN npm install -g npm@8.15.0 --location=global
 RUN npm install --location=global typescript
 RUN npm install --location=global react-scripts
 RUN npm install
