Update package json

--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "client:start:test": "npm run client:env:test && node -r dotenv/config ./node_modules/.bin/react-scripts start dotenv_config_path=$PWD/.env",
     "client:start:production": "npm run client:env:production && node -r dotenv/config ./node_modules/.bin/react-scripts start dotenv_config_path=$PWD/.env",
     "client:build:development": "npm run client:env:development && react-scripts --expose-gc --max-old-space-size=8192 build && npm run build:version",
-    "client:build:test": "npm run client:env:test && npm run client:htaccess:test && react-scripts --expose-gc --max-old-space-size=8192 build && npm run build:version && mv .htaccess ./build",
-    "client:build:production": "npm run client:env:production && npm run client:htaccess:production && react-scripts --expose-gc --max-old-space-size=8192 build && npm run build:version && mv .htaccess ./build",
+    "client:build:test": "npm run client:env:test && react-scripts --expose-gc --max-old-space-size=8192 build",
+    "client:build:test:apache": "npm run client:env:test && npm run client:htaccess:test && react-scripts --expose-gc --max-old-space-size=8192 build && npm run build:version && mv .htaccess ./build",
+    "client:build:production": "npm run client:env:production && react-scripts --expose-gc --max-old-space-size=8192 build",
+    "client:build:production:apache": "npm run client:env:production:apache && npm run client:htaccess:production && react-scripts --expose-gc --max-old-space-size=8192 build && npm run build:version && mv .htaccess ./build",
     "client:env:development": "npm run client:remove:env && cp .env.development.sample .env",
     "client:env:test": "npm run client:remove:env && cp .env.test.sample .env",
     "client:env:production": "npm run client:remove:env && cp .env.production.sample .env",
