--- a/nginx.conf
+++ b/nginx.conf
@@ -2,9 +2,9 @@ server {
     listen       80;
     server_name  localhost;
 
-    location /landing-downgrade {
+    location /membership-downgrade {
         root /usr/share/nginx/html;
-	    try_files $uri /landing-downgrade/index.html;
+	    try_files $uri /membership-downgrade/index.html;
     }
 
     error_page   500 502 503 504  /50x.html;
