Update env files

--- a/.env.test.sample
+++ b/.env.test.sample
@@ -2,7 +2,7 @@ PUBLIC_URL="/membership-downgrade/"
 
 REACT_APP_ENVIRONMENT="test"
 REACT_APP_NAME="landing_downgrade"
-REACT_APP_WEBSITE_TITLE="[Test] Greenpeace Argentina - Formulario de baja"
+REACT_APP_WEBSITE_TITLE="Greenpeace Argentina - Formulario de baja"
 REACT_APP_WEBSITE_META_DESCRIPTION="Greenpeace Meta Description"
 
 REACT_APP_MEMBERSHIP_DOWNGRADE_USERS_FORM_ID=52
