--- a/.env.production.sample
+++ b/.env.production.sample
@@ -8,6 +8,7 @@ REACT_APP_WEBSITE_META_DESCRIPTION="Greenpeace Meta Description"
 REACT_APP_MEMBERSHIP_DOWNGRADE_USERS_FORM_ID=53
 REACT_APP_MEMBERSHIP_DOWNGRADE_FORM_ID=25
 REACT_APP_MEMBERSHIP_CANCEL_FORM_ID=28
+REACT_APP_MEMBERSHIP_POSTPONE_FORM_ID=68
 
 REACT_APP_GOOGLE_TAG_MANAGER="GTM-TZB6GQ3"
 REACT_APP_GOOGLE_ANALYTICS_ID="UA-175817761-1"
