Update env files

--- a/.env.production.sample
+++ b/.env.production.sample
@@ -5,6 +5,8 @@ REACT_APP_NAME="landing_downgrade"
 REACT_APP_WEBSITE_TITLE="Greenpeace Argentina - Formulario de baja"
 REACT_APP_WEBSITE_META_DESCRIPTION="Greenpeace Meta Description"
 
+REACT_APP_GREENLAB_API_URL="/api/v1"
+
 REACT_APP_MEMBERSHIP_DOWNGRADE_USERS_FORM_ID=53
 REACT_APP_MEMBERSHIP_DOWNGRADE_FORM_ID=25
 REACT_APP_MEMBERSHIP_CANCEL_FORM_ID=28
