--- a/.env.development.sample
+++ b/.env.development.sample
@@ -5,6 +5,8 @@ REACT_APP_NAME="landing_downgrade"
 REACT_APP_WEBSITE_TITLE="Greenpeace Argentina - Formulario de baja"
 REACT_APP_WEBSITE_META_DESCRIPTION="Greenpeace Meta Description"
 
+REACT_APP_GREENLAB_API_URL="http://localhost:5003/api/v1"
+
 REACT_APP_MEMBERSHIP_DOWNGRADE_USERS_FORM_ID=51
 REACT_APP_MEMBERSHIP_DOWNGRADE_FORM_ID=19
 REACT_APP_MEMBERSHIP_CANCEL_FORM_ID=24
